<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView_recipe"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:contentDescription="@string/image"
            android:scaleType="fitXY"
            android:src="@drawable/loading"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/layoutName"
            style="@style/LinearLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageView_recipe">

            <TextView
                android:id="@+id/name"
                style="@style/TitleTextView"
                android:text="@string/name" />

            <TextView
                android:id="@+id/textView_Name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="2dp"
                android:fontFamily="@font/acme"
                android:gravity="center_vertical"
                android:textColor="@color/black"
                android:textSize="16sp"  />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutCalories"
            style="@style/LinearLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutName">

            <TextView
                android:id="@+id/calories"
                style="@style/TitleTextView"
                android:text="@string/calories" />

            <TextView
                android:id="@+id/textView_Calories"
                style="@style/detailsTextView" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutfats"
            style="@style/LinearLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutCalories">


            <TextView
                android:id="@+id/fats"
                style="@style/TitleTextView"
                android:text="@string/fats" />

            <TextView
                android:id="@+id/textView_fats"
                style="@style/detailsTextView" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutProteins"
            style="@style/LinearLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutfats">

            <TextView
                android:id="@+id/proteins"
                style="@style/TitleTextView"
                android:text="@string/proteins" />

            <TextView
                android:id="@+id/textView_proteins"
                style="@style/detailsTextView" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutDifficulties"
            style="@style/LinearLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutProteins">

            <TextView
                android:id="@+id/difficulty"
                style="@style/TitleTextView"
                android:text="@string/difficulty" />


            <TextView
                android:id="@+id/textView_difficulties"
                style="@style/detailsTextView" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutDescription"
            style="@style/LinearLayout"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutDifficulties">

            <TextView
                android:id="@+id/description"
                style="@style/TitleTextView"
                android:text="@string/description" />

            <TextView
                android:id="@+id/textView_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="2dp"
                android:fontFamily="@font/acme"
                android:gravity="center_vertical"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>